PyMaker/datas/object2/RawHTML/i15701/Python_DOC_referPages.problems-installing-python-in-windows.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/25445439/what-does-syntaxerror-missing-parentheses-in-call-to-print-mean-in-python">What does “SyntaxError: Missing parentheses in call to 'print'” mean in Python?</a>
<span class="question-originals-answer-count">
                    6 answers
                </span>
</li>
</ul>
</div>
<p>I installed Python 3.4 on Windows 7. Made changes to environment variables. 
This is my User Variable: </p>
<blockquote>
<p>Variable: PATH
  Value: C:\Python34\Scripts;</p>
</blockquote>
<p>This is my System Variables: </p>
<blockquote>
<p>Variable: Path
                               Value: C:\ProgramData\Oracle\Java\javapath;C:\Python34;C:\Python34\Scripts;</p>
</blockquote>
<p>The error that I get When I am trying to run it from command prompt.</p>
<pre><code>Microsoft Windows [Version 6.1.7600]
    Copyright (c) 2009 Microsoft Corporation.  All rights reserved.

    C:\Users\Batman&gt;cd C:\Python34

    C:\Python34&gt;cd Scripts

    C:\Python34\Scripts&gt;python hello.py
      File "hello.py", line 1
        print "Hello";
                    ^
    SyntaxError: Missing parentheses in call to 'print'

    C:\Python34\Scripts&gt;
</code></pre>
<p>What else did I miss installing???</p>
<p>EDIT: I moved to Python 2.x. While downloading Python from official website, I saw something like this: Windows x86 MSI program database (2.7.8) 
What does this exactly mean??</p>
</div>
<div class="post-text" itemprop="text">
<p>In Python 3.x, <a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow"><code>print</code></a> is a function. (not a statement) You should call it as a function form.</p>
<pre><code>print("Hello")
</code></pre>
<p>BTW, you don't need to append <code>;</code> at the end of the statement in Python.</p>
</div>
<div class="post-text" itemprop="text">
<p>It's not a problem with the install, it's a problem with version compatibility.</p>
<p>In Python 3, the print statement changed, and it needs parenthesis like:
<code>print("Hello")</code>. So you're trying to run Python 2 code with the Python 3
interpreter. If you notice, you're error message doesn't say anything about an
error in your install at all.</p>
<p>Here is some info on the differences between 2 and 3:
<a href="https://wiki.python.org/moin/Python2orPython3" rel="nofollow">https://wiki.python.org/moin/Python2orPython3</a></p>
<p>Edit: I saw you mentioned Beautiful Soup. From the <a href="http://www.crummy.com/software/BeautifulSoup/#Download" rel="nofollow">Soup homepage</a>:</p>
<blockquote>
<p>Beautiful Soup 3 works only under Python 2.x.</p>
<p>...</p>
<p>Beautiful Soup 4 works on both Python 2 (2.6+) and Python 3.</p>
</blockquote>
<p>So you'll need Soup 4 or higher.</p>
</div>
<span class="comment-copy">seems like your installation is just fine. the problem is syntax error like falsetru explained in his answer below</span>
<span class="comment-copy">@Elisha I am not able to install any modules using easy_install. How should I rectify this?</span>
<span class="comment-copy">I am also trying to install modules like BeautifulSoup but I get the same error.</span>
<span class="comment-copy">@user3206062, Are you trying to install Beautiful Soup 3? That version supports only Python 2.x. Try to install Beautiful Soup 4.</span>
<span class="comment-copy">I am not able to install BeautifulSoup using easy_install. How would I do this?? It worked in 3.4, but since I shifted to 2.7, easy_install is not working.</span>
<span class="comment-copy">@user3206062, Since Python 3.4, <code>pip</code> is included. In lower version, you need to install <code>pip</code> yourself. Following <a href="https://pip.pypa.io/en/latest/installing.html" rel="nofollow noreferrer">this page - pip installation</a> will help you. After installation, <code>pip install bs4</code> (to install BS4) or <code>pip install BeautifulSoup</code> (to install BS3)</span>
<span class="comment-copy">So should I work in Python 2.x? Because I am in the learning curve right now.</span>
<span class="comment-copy">The differences, though incompatible, will appear very insignificant to you at first. My opinion is that the version you learn first doesn't matter, but I'd recommend 3, because it's current. If you are following a tutorial use the tutorial's version (which appears to be 2). You can install both at the same time to different folders if you want to. For more info read the first link I linked.</span>
